--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-background-actions": "^2.6.7",
+    "react-native-bg-thread": "^1.2.0",
+    "react-native-multithreading": "^1.1.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2"
   },
